[project]
name = "socials-bot"
version = "0.1.0"
description = "A telegram bot that publish posts on bluesky and fosstodon via telegram."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.59",
    "mastodon-py>=2.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=20.0",
    "pytz>=2025.1",
    "schedule>=1.2.2",
]
